--- a/index.html
+++ b/index.html
@@ -4,10 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andres Uribe - Google</title>
-<link rel="stylesheet" href="./css/style.css">
+    <title>Google - Andres Uribe</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div>
+            <p>Gmail</p>
+        </div>
+        <div>
+            <p>Imagenes</p>
+        </div>
+        <div>
+            <p>Icono 1</p>
+        </div>
+        <div>
+            <p>Icono 2</p>
+        </div>
+    </header>
+    <main>
+        <div class="company_logo">
+            <p>Google</p>
+        </div>
+        <div class="search_bar">
+            <p>search bar</p>
+        </div>
+        <div class="search_buttoms">
+            <p>buttoms</p>
+        </div>
+    </main>
+    <footer>
+        <div class="containers_footer">
+            <div>
+                <p>Publicidad</p>
+            </div>
+            <div>
+                <p>Negocios</p>
+            </div>
+            <div>
+                <p>Acerca de</p>
+            </div>
+            <div>
+                <p>Como funciona la Busqueda</p>
+            </div>
+        </div>
+        <div class="containers_footer">
+            <div>
+                <p>Privacidad</p>
+            </div>
+            <div>
+                <p>Condiciones</p>
+            </div>
+            <div>
+                <p>Preferencias</p>
+            </div>
+        </div>
+    </footer>  
 </body>
 </html>
