basic layout with images

--- a/index.html
+++ b/index.html
@@ -23,14 +23,21 @@
         </div>
     </header>
     <main>
-        <div class="company_logo">
-            <p>Google</p>
-        </div>
+        <picture class="company_logo">
+            <img src="./pics/logo-Google.png" alt="Company logo"/>
+        </picture>
         <div class="search_bar">
-            <p>search bar</p>
+            <picture>
+                <img src="./pics/search.png" alt="Magnifying glass">
+            </picture>
+            <span></span>
+            <picture>
+                <img src="./pics/google-voice.png" alt="Voice search">
+            </picture>
         </div>
         <div class="search_buttoms">
-            <p>buttoms</p>
+            <span>Buscar con Google</span>
+            <span>I'm Feeling Lucky</span>
         </div>
     </main>
     <footer>
