basic layout pre fonts

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div>
             <p>Imagenes</p>
         </div>
-        <div>
-            <p>Icono 1</p>
-        </div>
-        <div>
-            <p>Icono 2</p>
-        </div>
+        <picture>
+            <img src="./pics/dots-menu.png" alt="Dots menu"/>
+        </picture>
+        <picture>
+            <img src="./pics/user_image.jpg" alt="User image" class="user_image"/>
+        </picture>
     </header>
     <main>
         <picture class="company_logo">
