Changes to initial header

--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
 </head>
 <body>
     <header>
-        <div>
-            <p>Gmail</p>
-        </div>
-        <div>
-            <p>Imagenes</p>
-        </div>
-        <picture>
-            <img src="./pics/dots-menu.png" alt="Dots menu"/>
-        </picture>
-        <picture>
-            <img src="./pics/user_image.jpg" alt="User image" class="user_image"/>
-        </picture>
+        <nav>
+            <ul>
+                <li>
+                    <a href="">Gmail</a>
+                </li>
+                <li>
+                    <a href="">Imagenes</a>
+                </li>
+                <li>
+                    <a href="">Icon</a>
+                </li>
+                <li>
+                    <a href="">Photo</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <picture class="company_logo">
