header with adjustments

--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav_right_section">
                 <li>
                     <a href="">Gmail</a>
                 </li>
                 <li>
                     <a href="">Imagenes</a>
                 </li>
-                <li>
-                    <a href="">Icon</a>
+                <li class="menu_icon">
+                    <a href=""></a>
                 </li>
                 <li>
-                    <a href="">Photo</a>
+                    <a href="">
+                        <img src="https://lh3.googleusercontent.com/ogw/AOh-ky31V0C0KYq8q23NFMBVkd_cO3Q6TzhuImHcXqFomA=s32-c-mo" alt="User image">
+                    </a>
                 </li>
             </ul>
         </nav>
