main body layout

--- a/index.html
+++ b/index.html
@@ -29,22 +29,25 @@
         </nav>
     </header>
     <main>
-        <picture class="company_logo">
-            <img src="./pics/logo-Google.png" alt="Company logo"/>
-        </picture>
-        <div class="search_bar">
-            <picture>
-                <img src="./pics/search.png" alt="Magnifying glass">
-            </picture>
-            <span></span>
-            <picture>
-                <img src="./pics/google-voice.png" alt="Voice search">
-            </picture>
-        </div>
-        <div class="search_buttoms">
-            <span>Buscar con Google</span>
-            <span>I'm Feeling Lucky</span>
-        </div>
+        <section class="company_logo">
+            <img src="" alt="Company logo"/>
+        </section>
+        <section class="search_bar">
+            <div class="search_bar_container">
+                <span class="search_icon">
+                </span>
+                <input type="text">
+                <a class="voice_icon" href=""></a>
+            </div>
+        </section>
+        <section class="search_buttoms">
+            <div>
+                <button>Buscar con Google</button>
+            </div>
+            <div>
+                <button>I'm Feeling Lucky</button>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="containers_footer">
