middle section ready

--- a/index.html
+++ b/index.html
@@ -50,31 +50,31 @@
         </section>
     </main>
     <footer>
-        <div class="containers_footer">
-            <div>
-                <p>Publicidad</p>
-            </div>
-            <div>
-                <p>Negocios</p>
-            </div>
-            <div>
-                <p>Acerca de</p>
-            </div>
-            <div>
-                <p>Como funciona la Busqueda</p>
-            </div>
-        </div>
-        <div class="containers_footer">
-            <div>
-                <p>Privacidad</p>
-            </div>
-            <div>
-                <p>Condiciones</p>
-            </div>
-            <div>
-                <p>Preferencias</p>
-            </div>
-        </div>
+        <ul class="containers_footer">
+            <li>
+                <a href="">Publicidad</a>
+            </li>
+            <li>
+                <a href="">Negocios</a>
+            </li>
+            <li>
+                <a href="">Acerca de</a>
+            </li>
+            <li>
+                <a href="">Como funciona la Busqueda</a>
+            </li>
+        </ul>
+        <ul class="containers_footer">
+            <li>
+                <a href="">Privacidad</a>
+            </li>
+            <li>
+                <a href="">Condiciones</a>
+            </li>
+            <li>
+                <a href="">Preferencias</a>
+            </li>
+        </ul>
     </footer>  
 </body>
 </html>
